@@ -9,7 +9,7 @@
  * See LICENSE.MIT file for more details
  *
  * Generated by /CodeGen/cecil-gen.rb do not edit
- * Wed Aug 17 18:20:04 CEST 2005
+ * Fri Aug 19 21:08:17 CEST 2005
  *
  *****************************************************************************/
 
@@ -96,7 +96,7 @@ namespace Mono.Cecil.Implem {
 			(this as ICollection).CopyTo (ary, index);
 		}
 
-		public override IEnumerator GetEnumerator ()
+		public new IEnumerator GetEnumerator ()
 		{
 			return this.BaseGetAllValues ().GetEnumerator ();
 		}
